k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: fsight
  labels:
    app: fsight-api
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
